--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
-	"name": "UserAgentChangeBySite",
-	"version": "0.0.1",
+	"name": "ChangeHeader",
+	"version": "0.0.3",
 	"permissions": [
 		"webRequest",
 		"webRequestBlocking",
